Fixed matches info being too wide

--- a/resources/css/sass/pages/_matches.scss
+++ b/resources/css/sass/pages/_matches.scss
@@ -159,7 +159,7 @@ $border-color-dark: #e2e0e1;
       position: absolute;
       bottom: 10px;
       padding-inline: 10px;
-      font-size: 16px;
+      font-size: 15px;
       color: $text-color-gray;
       line-height: 1.7;
       a{
